# ai-300-p009-assignments

Assignment_01/: CLAUDE.md
Assignment_01/Part_02/: CLAUDE.md  CLAUDE_Planning.txt
Assignment_01/Part_02/clothing/boy/: 13_year_old_boy_shalwar_kameez.md
Assignment_01/part_01/: CLAUDE.md
Assignment_01/part_02/clothing/: boy13_year_old_boy_shalwar_kameez.md
assignment_01/part_02/: CLAUDE_planning.txt
assignment_02/: README.md  main.py  pyproject.toml
assignment_03/: pyproject.toml
assignment_03/chapter_21/lesson_05/exercise_01/question_01/: main.py
assignment_03/chapter_21/lesson_05/exercise_01/question_02/: main.py
assignment_03/chapter_21/lesson_05/exercise_01/question_03/: main.py
assignment_03/chapter_21/lesson_05/exercise_02/question_01/: main.py
assignment_03/chapter_21/lesson_05/exercise_02/question_02/: main.py
assignment_03/chapter_21/lesson_05/exercise_02/question_03/: main.py
assignment_03/chapter_21/lesson_05/exercise_03/question_01/: main.py
assignment_03/chapter_21/lesson_05/exercise_03/question_02/: main.py
assignment_03/chapter_21/lesson_07/exercise_01/: main.py
assignment_03/chapter_21/lesson_07/exercise_02/: main.py
assignment_03/chapter_21/lesson_07/exercise_03/: main.py
assignment_03/chapter_21/lesson_07/exercise_04/: main.py
